--- a/BagBanNguyet.html
+++ b/BagBanNguyet.html
@@ -41,34 +41,30 @@
             <li class="nav-item"><a class="nav-link" href="Hoodie.html">Hoodie</a></li>
             <li class="nav-item"><a class="nav-link" href="Phukien.html">Phụ Kiện</a></li>
         </ul>
-        <div style="background: #d9d9d9;height: 40px;"><a class="ms-3 me-2" href="index.html" style="font-size: 20px;">Home/</a><a href="Bag.html" style="font-size: 20px;">Bags</a></div>
+        <div style="background: #d9d9d9;height: 40px;"><a class="ms-3 me-2" href="index.html" style="font-size: 20px;">Home/</a><a href="Bag.html" style="font-size: 20px;">Bags/</a><a href="BagBanNguyet.html" style="font-size: 20px;">&nbsp;Túi Bán Nguyệt Siêu Nhỏ</a></div>
     </div>
     <div class="container">
-        <h3>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Bag</h3>
         <div>
             <div class="row">
                 <div class="col text-center" style="text-align: center;">
-                    <div><img width="225" height="198" src="assets/img/clipboard-image-24.png">
-                        <p><strong><span style="color: rgb(0, 0, 0);">Túi Bán Nguyệt Siêu Nhỏ</span></strong></p>
-                        <p>499.000 VND</p><a href="BagBanNguyet.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
-                                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
-                            </svg>Thêm vào giỏ hàng</button>
+                    <div class="row">
+                        <div class="col-md-9"><img class="border mb-2" width="394" height="460" src="assets/img/clipboard-image-24.png"></div>
+                        <div class="d-flex flex-column justify-content-start col-md-3"><img class="mb-2" width="131" height="148" src="assets/img/clipboard-image-29.png"><img class="mb-2" width="131" height="148" src="assets/img/clipboard-image-36.png"><img class="mb-2" width="131" height="148" src="assets/img/clipboard-image-37.png"></div>
                     </div>
                 </div>
                 <div class="col text-center" style="text-align: center;">
-                    <div><img width="225" height="198" src="assets/img/clipboard-image-28.png">
-                        <p><strong><span style="color: rgb(0, 0, 0);">Túi Đa Năng Hai Kiểu Đeo</span></strong></p>
-                        <p>799.000 VND</p><a href="BagBanNguyet.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                    <div>
+                        <h3>Túi Bán Nguyệt Siêu Nhỏ</h3>
+                        <p></p>
+                        <p class="text-center">ID: B001</p>
+                        <p class="text-center"><strong>Giá: 499.000 VND</strong></p>
+                        <div class="md-3"><label class="form-label">Chọn kích thước:&nbsp;</label>
+                            <div id="productSize"><button class="btn btn-outline-secondary btn-sm me-2 mb-2" type="button">S</button><button class="btn btn-outline-secondary btn-sm me-2 mb-2" type="button">M</button><button class="btn btn-outline-secondary btn-sm me-2 mb-2" type="button">L</button>
+                                <p class="text-justify-custom">Túi Bán Nguyệt Siêu Nhỏ sở hữu thiết kế nửa vầng trăng độc đáo, mang đến vẻ ngoài thanh lịch và tinh tế. Kích thước nhỏ gọn, tiện lợi cho các vật dụng thiết yếu. Chất liệu da cao cấp mềm mại, bền đẹp theo thời gian. Phù hợp cho dạo phố, hẹn hò và sự kiện nhẹ nhàng.</p>
+                            </div>
+                        </div><button class="btn btn-dark rounded-pill px-4" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
-                            </svg>Thêm vào giỏ hàng</button>
-                    </div>
-                </div>
-                <div class="col text-center" style="text-align: center;">
-                    <div><img width="225" height="198" src="assets/img/clipboard-image-31.png">
-                        <p><strong><span style="color: rgb(0, 0, 0);">Balo Đa Năng</span></strong></p>
-                        <p>1.199.999 VND</p><a href="BagBanNguyet.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
-                                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
-                            </svg>Thêm vào giỏ hàng</button>
+                            </svg>&nbsp; Thêm vào giỏ hàng</button>
                     </div>
                 </div>
             </div>
