--- a/Cart.html
+++ b/Cart.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
+<html data-bs-theme="light" lang="en" data-bss-forced-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>project_uiux (2)</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&amp;subset=latin-ext&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alatsi&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
+    <link rel="stylesheet" href="assets/css/bss-overrides.css">
     <link rel="stylesheet" href="assets/css/Collapse-card.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
     <link rel="stylesheet" href="assets/css/Navbar-With-Button-icons.css">
     <link rel="stylesheet" href="assets/css/Pretty-Footer-.css">
     <link rel="stylesheet" href="assets/css/Sign-Up-Form---Gabriela-Carvalho.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/css/Collapse-card.css">
+    <link rel="stylesheet" href="assets/css/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
+    <link rel="stylesheet" href="assets/css/css/Navbar-With-Button-icons.css">
+    <link rel="stylesheet" href="assets/css/css/Pretty-Footer-.css">
+    <link rel="stylesheet" href="assets/css/css/Sign-Up-Form---Gabriela-Carvalho.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min-1.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col"><img class="img-fluid" width="627" height="398" src="assets/img/logo.png" href="index.html" onlick="Windown.location.href=&quot;index.html&quot;"></div>
+            <div class="col"><a href="index.html"><img width="144" height="94" src="assets/img/logo.png"></a></div>
             <div class="col"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone-fill" style="color: #ff0000;">
                     <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
                 </svg><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><strong>&nbsp;Hotline mua hàng</strong></label><label class="form-label">Gọi ngày: 099 9657222</label></div>
@@ -27,21 +39,28 @@
             <div class="col"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-star">
                         <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"></path>
                     </svg><strong>&nbsp;1 đổi 1 nếu lỗi hàng</strong></label><label class="form-label">Trong vòng 7 ngày</label></div>
-            <div class="col col-xl-2"><label class="col-form-label mt-4 mb-0 pb-0" style="color: #212529;" href="login.html"><a href="#" style="color: rgb(10,10,10);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-circle" style="font-size: 21px;">
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"></path>
-                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"></path>
-                        </svg><strong>&nbsp;Đăng nhập/Đăng ký</strong></a></label></div>
-            <div class="col"><label class="col-form-label mt-4 mb-0 pb-0" style="color: #212529;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart3" style="font-size: 32px;">
-                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"></path>
-                    </svg><strong>&nbsp;Giỏ hàng</strong></label></div>
+            <div class="col"></div>
+            <div class="col"><a href="Cart.html"><label class="form-label mt-4 mb-0 pb-0" style="color: #212529;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart3" style="font-size: 32px;">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"></path>
+                        </svg><strong>&nbsp;Giỏ hàng</strong></label></a></div>
+            <div class="col mt-4">
+                <div class="position-relative" id="userDropdownWrapper">
+                    <div id="authLinks"><a class="mt-5" href="Signup.html" style="color: rgb(8,8,8);font-weight: bold;"></a><a class="me-2" href="Login.html" style="color: rgb(8,8,8);font-weight: bold;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-fill" style="font-size: 21px;">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"></path>
+                            </svg>Đăng nhập&nbsp;</a></div>
+                    <div id="userMenu" style="display: none; cursor: pointer"><span class="fw-bold" id="usernameDisplay">Text</span>
+                        <div class="bg-white border shadow position-absolute p-2 mt-1" id="dropdownMenu" style="display: none; z-index: 1000;"></div><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <ul class="nav nav-tabs">
-            <li class="nav-item"><a class="nav-link active" href="index.html"><strong>Home</strong></a></li>
-            <li class="nav-item"><a class="nav-link" href="Tshirt.html">T-Shirt</a></li>
-            <li class="nav-item"><a class="nav-link" href="Bag.html">Tote Bag</a></li>
-            <li class="nav-item"><a class="nav-link" href="Hoodie.html">Hoodie</a></li>
-            <li class="nav-item"><a class="nav-link" href="Phukien.html">Phụ kiện</a></li>
+            <li class="nav-item"><a class="nav-link" href="Tshirt.html" style="font-size: 20px;">T-Shirt</a></li>
+            <li class="nav-item"><a class="nav-link" href="Hoodie.html" style="font-size: 20px;">Hoodie</a></li>
+            <li class="nav-item"><a class="nav-link" href="Phukien.html" style="font-size: 20px;">Tote Bag</a></li>
+            <li class="nav-item"><a class="nav-link" href="Phukien.html" style="font-size: 20px;">Phụ Kiện</a></li>
         </ul>
+        <div class="d-flex align-items-center" style="background: #d9d9d9;height: 40px;"><a class="ms-3 me-2" href="index.html" style="font-size: 15px;">Home/</a><a href="Cart.html" style="font-size: 15px;">Cart</a></div>
     </div>
     <div class="container">
         <h3>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Giỏ hàng&nbsp;</h3>
@@ -58,37 +77,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>
-                                <div class="d-flex align-items-center"><img class="rounded shadow-sm me-3" src="assets/img/clipboard-image-24.png" width="96" height="96">
-                                    <div>
-                                        <h6 class="mb-0">Túi Bán Nguyệt Siêu Nhỏ</h6><small>Kích thước: M</small>
-                                    </div>
-                                </div>
-                            </td>
+                            <td><div class="d-flex align-items-center"><img class="rounded shadow-sm me-3" height="96" src="assets/img/clipboard-image-24.png"><div><h6 class="mb-0">Túi Bán Nguyệt Siêu Nhỏ</h6><small>Kích thước: M</small></div></div></td>
                             <td class="text-center align-middle"><span><br>499.000đ<br><br></span></td>
                             <td class="text-center align-middle"><input class="form-control-sm w-50 mx-auto form-control" type="number" min="1" value="1"></td>
                             <td class="text-center align-middle"><span><br>499.000đ<br><br></span></td>
                         </tr>
                         <tr>
-                            <td>
-                                <div class="d-flex align-items-center"><img class="rounded shadow-sm me-3" src="assets/img/clipboard-image-28.png" width="96" height="96">
-                                    <div>
-                                        <h6 class="mb-0">Túi Đa Năng Hai Kiểu Đeo</h6><small>Kích thước: M</small>
-                                    </div>
-                                </div>
-                            </td>
+                            <td><div class="d-flex align-items-center"><img class="rounded shadow-sm me-3" height="96" src="assets/img/clipboard-image-28.png"><div><h6 class="mb-0">Túi Đa Năng Hai Kiểu Đeo</h6><small>Kích thước: M</small></div></div></td>
                             <td class="text-center align-middle"><span><br>799.000đ<br><br></span></td>
                             <td class="text-center align-middle"><input class="form-control-sm w-50 mx-auto form-control" type="number" min="1" value="1"></td>
                             <td class="text-center align-middle"><span><br>799.000đ<br><br></span></td>
                         </tr>
                         <tr>
-                            <td>
-                                <div class="d-flex align-items-center"><img class="rounded shadow-sm me-3" src="assets/img/clipboard-image-31.png" width="96" height="96">
-                                    <div>
-                                        <h6 class="mb-0">Balo Đa Năng</h6><small>Kích thước: M</small>
-                                    </div>
-                                </div>
-                            </td>
+                            <td><div class="d-flex align-items-center"><img class="rounded shadow-sm me-3" height="96" src="assets/img/clipboard-image-31.png"><div><h6 class="mb-0">Balo Đa Năng</h6><small>Kích thước: M</small></div></div></td>
                             <td class="text-center align-middle"><span><br>1.199.999đ<br><br></span></td>
                             <td class="text-center align-middle"><input class="form-control-sm w-50 mx-auto form-control" type="number" min="1" value="1"></td>
                             <td class="text-center align-middle"><span><br>1.199.999đ<br><br></span></td>
@@ -97,13 +98,11 @@
                 </table>
             </div>
         </div>
-        <div class="justify-content-end row">
-            <div class="bg-light border rounded shadow-sm p-3">
+        <div class="row justify-content-end"><div class="bg-light border rounded shadow-sm p-3">
                 <h5>Tổng cộng</h5>
                 <div class="d-flex justify-content-between"><span>Tạm tính:&nbsp;</span><strong>2.497.999đ</strong></div>
-                <hr><button class="btn btn-dark rounded-pill w-100 mt-2" type="button">Thanh toán</button>
-            </div>
-        </div>
+<hr><button class="btn btn-dark rounded-pill w-100 mt-2" type="button" onclick="window.location.href='Test.html'">Thanh toán</button>
+            </div></div>
     </div>
     <div class="container-fluid">
         <footer class="pt-0" style="height: 100%px;background: rgb(41, 44, 47);">
@@ -130,21 +129,15 @@
                             </div>
                             <div class="row">
                                 <div class="col"><a href="index.html" style="color: rgb(251,249,249);"><span style="font-weight: normal !important;">Trang chủ</span></a></div>
-                                <div class="col">
-                                    <p class="mt-1"><span style="font-weight: normal !important;">Giới thiệu</span></p>
-                                </div>
+                                <div class="col"><a href="#" style="color: rgb(251,249,249);"><span style="font-weight: normal !important;">Giới thiệu</span></a></div>
                             </div>
                             <div class="row">
                                 <div class="col"><a href="#" style="color: rgb(251,249,249);"><span style="font-weight: normal !important;">Tìm kiếm sản phẩm</span></a></div>
-                                <div class="col">
-                                    <p class="mt-1"><span style="font-weight: normal !important;">Hướng dẫn thanh toán</span></p>
-                                </div>
+                                <div class="col"><a href="#" style="color: rgb(251,249,249);"><span style="font-weight: normal !important;">Hướng dẫn thanh toán</span></a></div>
                             </div>
                             <div class="row">
                                 <div class="col"><a href="#" style="color: rgb(251,249,249);"><span style="font-weight: normal !important;">Chính sách bảo mật</span></a></div>
-                                <div class="col">
-                                    <p class="mt-1" href="Contact.html"><span style="font-weight: normal !important;">Liên Hệ</span></p>
-                                </div>
+                                <div class="col"><a href="Contact.html" style="color: rgb(251,249,249);"><span style="font-weight: normal !important;">Liên hệ</span></a></div>
                             </div>
                         </div>
                     </div>
@@ -165,6 +158,8 @@
     <script src="assets/js/Addjs.js"></script>
     <script src="assets/js/Collapse-card-animations.js"></script>
     <script src="assets/js/Contact-Form-v2-Modal--Full-with-Google-Map-scripts.js"></script>
+    <script src="assets/js/untitled.js"></script>
+    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
