--- a/Pass.html
+++ b/Pass.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>project_uiux (2)</title>
+    <title>NoKa Hight Fashion</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&amp;subset=latin-ext&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alatsi&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="assets/css/bss-overrides.css">
     <link rel="stylesheet" href="assets/css/Collapse-card.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
@@ -16,9 +17,51 @@
     <link rel="stylesheet" href="assets/css/Pretty-Footer-.css">
     <link rel="stylesheet" href="assets/css/Sign-Up-Form---Gabriela-Carvalho.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/css/Collapse-card.css">
+    <link rel="stylesheet" href="assets/css/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
+    <link rel="stylesheet" href="assets/css/css/Navbar-With-Button-icons.css">
+    <link rel="stylesheet" href="assets/css/css/Pretty-Footer-.css">
+    <link rel="stylesheet" href="assets/css/css/Sign-Up-Form---Gabriela-Carvalho.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min-1.css">
 </head>
 
 <body style="overflow-x: hidden;">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6 col-md-2"><a href="index.html"><img class="img-fluid" width="627" height="398" src="assets/img/logo.png" onclick="windown.location.href=&quot;index.html&quot;"></a></div>
+            <div class="col-6 col-md-2"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone-fill" style="color: #ff0000;">
+                        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
+                    </svg><strong>&nbsp;Hotline mua hàng</strong></label><label class="form-label" style="font-size: 14px;">Gọi ngày: 099 9657222</label></div>
+            <div class="col-6 col-md-2"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-truck" style="color: #ff0000;">
+                        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"></path>
+                    </svg><strong>&nbsp;Giao hàng tận nơi</strong></label><label class="form-label" style="font-size: 14px;">Miễn phí từ 5 sản phẩm</label></div>
+            <div class="col-6 col-md-2"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-star">
+                        <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"></path>
+                    </svg><strong>&nbsp;1 đổi 1 nếu lỗi hàng</strong></label><label class="form-label" style="font-size: 14px;">Trong vòng 7 ngày</label></div>
+            <div class="col-6 col-md-2">
+                <div class="position-relative" id="userDropdownWrapper1"></div>
+            </div>
+            <div class="col-6 col-md-2 mt-4">
+                <div class="position-relative" id="userDropdownWrapper">
+                    <div id="authLinks"><a class="mt-5" href="Signup.html" style="color: rgb(8,8,8);font-weight: bold;"></a><a class="me-2" href="Login.html" style="color: rgb(8,8,8);font-weight: bold;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-fill" style="font-size: 21px;">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"></path>
+                            </svg>Đăng nhập&nbsp;</a></div>
+                    <div id="userMenu" style="display: none; cursor: pointer"><span class="fw-bold" id="usernameDisplay">Text</span>
+                        <div class="bg-white border shadow position-absolute p-2 mt-1" id="dropdownMenu" style="display: none; z-index: 1000;"></div><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item"></li>
+            <li class="nav-item"><a class="nav-link" href="Tshirt.html" style="font-size: 20px;">T-Shirt</a></li>
+            <li class="nav-item"><a class="nav-link" href="Bag.html" style="font-size: 20px;">Tote Bag</a></li>
+            <li class="nav-item"><a class="nav-link" href="Hoodie.html" style="font-size: 20px;">Hoodie</a></li>
+            <li class="nav-item"><a class="nav-link" href="Phukien.html" style="font-size: 20px;">Phụ kiện</a></li>
+        </ul>
+        <div style="background: #d9d9d9;height: 40px;"></div>
+    </div>
     <div class="container" style="height: 194.398px;">
         <div class="mt-5 container" style="max-width: 500px">
             <h2 class="text-center mb-4">Quên Mật Khẩu?</h2>
@@ -31,6 +74,7 @@
     <script src="assets/js/Collapse-card-animations.js"></script>
     <script src="assets/js/Contact-Form-v2-Modal--Full-with-Google-Map-scripts.js"></script>
     <script src="assets/js/untitled.js"></script>
+    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
