--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>project_uiux (2)</title>
+    <title>NoKa Hight Fashion</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&amp;subset=latin-ext&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alatsi&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="assets/css/bss-overrides.css">
     <link rel="stylesheet" href="assets/css/Collapse-card.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
@@ -16,28 +17,32 @@
     <link rel="stylesheet" href="assets/css/Pretty-Footer-.css">
     <link rel="stylesheet" href="assets/css/Sign-Up-Form---Gabriela-Carvalho.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/css/Collapse-card.css">
+    <link rel="stylesheet" href="assets/css/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
+    <link rel="stylesheet" href="assets/css/css/Navbar-With-Button-icons.css">
+    <link rel="stylesheet" href="assets/css/css/Pretty-Footer-.css">
+    <link rel="stylesheet" href="assets/css/css/Sign-Up-Form---Gabriela-Carvalho.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min-1.css">
 </head>
 
 <body style="overflow-x: hidden;">
     <div class="container-fluid">
         <div class="row">
-            <div class="col"><a href="index.html"><img class="img-fluid" width="627" height="398" src="assets/img/logo.png" onclick="windown.location.href=&quot;index.html&quot;"></a></div>
-            <div class="col"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone-fill" style="color: #ff0000;">
+            <div class="col-6 col-md-2"><a href="index.html"><img class="img-fluid" width="627" height="398" src="assets/img/logo.png" onclick="windown.location.href=&quot;index.html&quot;"></a></div>
+            <div class="col-6 col-md-2"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone-fill" style="color: #ff0000;">
                         <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
                     </svg><strong>&nbsp;Hotline mua hàng</strong></label><label class="form-label" style="font-size: 14px;">Gọi ngày: 099 9657222</label></div>
-            <div class="col"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-truck" style="color: #ff0000;">
+            <div class="col-6 col-md-2"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-truck" style="color: #ff0000;">
                         <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"></path>
                     </svg><strong>&nbsp;Giao hàng tận nơi</strong></label><label class="form-label" style="font-size: 14px;">Miễn phí từ 5 sản phẩm</label></div>
-            <div class="col"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-star">
+            <div class="col-6 col-md-2"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-star">
                         <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"></path>
                     </svg><strong>&nbsp;1 đổi 1 nếu lỗi hàng</strong></label><label class="form-label" style="font-size: 14px;">Trong vòng 7 ngày</label></div>
-            <div class="col">
+            <div class="col-6 col-md-2">
                 <div class="position-relative" id="userDropdownWrapper1"></div>
             </div>
-            <div class="col"><a href="Pay.html"><label class="form-label mt-4 mb-0 pb-0" style="color: #212529;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart3" style="font-size: 32px;">
-                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"></path>
-                        </svg><strong>&nbsp;Giỏ hàng</strong></label></a></div>
-            <div class="col mt-4">
+            <div class="col-6 col-md-2 mt-4">
                 <div class="position-relative" id="userDropdownWrapper">
                     <div id="authLinks"><a class="mt-5" href="Signup.html" style="color: rgb(8,8,8);font-weight: bold;"></a><a class="me-2" href="Login.html" style="color: rgb(8,8,8);font-weight: bold;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-fill" style="font-size: 21px;">
                                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"></path>
@@ -49,15 +54,15 @@
             </div>
         </div>
         <ul class="nav nav-tabs">
-            <li class="nav-item"><a class="nav-link active" href="index.html"><strong>Home</strong></a></li>
-            <li class="nav-item"><a class="nav-link" href="Tshirt.html">T-Shirt</a></li>
-            <li class="nav-item"><a class="nav-link" href="Bag.html">Tote Bag</a></li>
-            <li class="nav-item"><a class="nav-link" href="Hoodie.html">Hoodie</a></li>
-            <li class="nav-item"><a class="nav-link" href="Phukien.html">Phụ kiện</a></li>
+            <li class="nav-item"><a class="nav-link active" href="index.html" style="font-size: 20px;"><strong>Home</strong></a></li>
+            <li class="nav-item"><a class="nav-link" href="Tshirt.html" style="font-size: 20px;">T-Shirt</a></li>
+            <li class="nav-item"><a class="nav-link" href="Bag.html" style="font-size: 20px;">Tote Bag</a></li>
+            <li class="nav-item"><a class="nav-link" href="Hoodie.html" style="font-size: 20px;">Hoodie</a></li>
+            <li class="nav-item"><a class="nav-link" href="Phukien.html" style="font-size: 20px;">Phụ kiện</a></li>
         </ul>
         <div style="background: #d9d9d9;height: 40px;"></div>
     </div>
-    <div style="width: 100%;"><img class="d-flex ms-3 mt-2" width="1369" height="500" src="assets/img/Screenshot%202025-06-21%20220626.png" style="width: 100%;height: 600px;"></div>
+    <div style="width: 100%;"><img class="img-fluid w-100 mt-2" src="assets/img/Screenshot%202025-06-21%20220626.png" alt="Banner"></div>
     <div class="container">
         <h3>&nbsp; &nbsp; &nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-fire text-danger" style="font-size: 45px;">
                 <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"></path>
@@ -67,7 +72,7 @@
                 <div class="col text-center" style="text-align: center;">
                     <div><img width="225" height="198" src="assets/img/clipboard-image-24.png">
                         <p><strong><span style="color: rgb(0, 0, 0);">Túi Bán Nguyệt Siêu Nhỏ</span></strong></p>
-                        <p>499.000 VND</p><a href="chitietsanpham.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                        <p>499.000 VND</p><a href="BagBanNguyet.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button" onclick="window.location.href=&quot;CartB1.html&quot;">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
                             </svg>Thêm vào giỏ hàng</button>
                     </div>
@@ -75,7 +80,7 @@
                 <div class="col text-center" style="text-align: center;">
                     <div><img width="225" height="198" src="assets/img/clipboard-image-18.png">
                         <p><strong><span style="color: rgb(0, 0, 0);">DRY-EX Áo Khoác Có Mũ</span></strong></p>
-                        <p>490.000 VND</p><a href="chitietsanpham.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                        <p>490.000 VND</p><a href="#" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
                             </svg>Thêm vào giỏ hàng</button>
                     </div>
@@ -83,7 +88,7 @@
                 <div class="col text-center" style="text-align: center;">
                     <div><img width="225" height="198" src="assets/img/clipboard-image-34.png">
                         <p><strong><span style="color: rgb(0, 0, 0);">Mũ Rộng Vành Chống Tia UV</span></strong></p>
-                        <p>399.000 VND</p><a href="hoodie.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                        <p>399.000 VND</p><a href="#" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
                             </svg>Thêm vào giỏ hàng</button>
                     </div>
@@ -93,7 +98,7 @@
                 <div class="col text-center" style="text-align: center;">
                     <div><img width="225" height="198" src="assets/img/clipboard-image-5.png">
                         <p><a href="https://www.uniqlo.com/vn/vi/products/E477607-000"><strong><span style="color: black;">Áo Thun Pointelle</span></strong></a></p>
-                        <p>339.000 VND</p><a href="hoodie.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                        <p>339.000 VND</p><a href="#" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
                             </svg>Thêm vào giỏ hàng</button>
                     </div>
@@ -101,7 +106,7 @@
                 <div class="col text-center" style="text-align: center;">
                     <div><img width="225" height="198" src="assets/img/clipboard-image-8.png">
                         <p><strong><span style="color: rgb(0, 0, 0);">Áo Thun Dáng Mini Kẻ Sọc</span></strong></p>
-                        <p>499.000 VND</p><a href="hoodie.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                        <p>499.000 VND</p><a href="#" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
                             </svg>Thêm vào giỏ hàng</button>
                     </div>
@@ -109,7 +114,7 @@
                 <div class="col text-center" style="text-align: center;">
                     <div><img width="225" height="198" src="assets/img/clipboard-image-28.png">
                         <p><strong><span style="color: rgb(0, 0, 0);">Túi Đa Năng Hai Kiểu Đeo</span></strong></p>
-                        <p>799.000 VND</p><a href="hoodie.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                        <p>799.000 VND</p><a href="BagDaNang.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
                             </svg>Thêm vào giỏ hàng</button>
                     </div>
@@ -195,6 +200,7 @@
     <script src="assets/js/Collapse-card-animations.js"></script>
     <script src="assets/js/Contact-Form-v2-Modal--Full-with-Google-Map-scripts.js"></script>
     <script src="assets/js/untitled.js"></script>
+    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
