--- a/Tshirt.html
+++ b/Tshirt.html
@@ -4,48 +4,61 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>project_uiux (2)</title>
+    <title>NoKa Hight Fashion (1)</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&amp;subset=latin-ext&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alatsi&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
+    <link rel="stylesheet" href="assets/css/bss-overrides.css">
     <link rel="stylesheet" href="assets/css/Collapse-card.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
     <link rel="stylesheet" href="assets/css/Navbar-With-Button-icons.css">
     <link rel="stylesheet" href="assets/css/Pretty-Footer-.css">
     <link rel="stylesheet" href="assets/css/Sign-Up-Form---Gabriela-Carvalho.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/css/Collapse-card.css">
+    <link rel="stylesheet" href="assets/css/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
+    <link rel="stylesheet" href="assets/css/css/Navbar-With-Button-icons.css">
+    <link rel="stylesheet" href="assets/css/css/Pretty-Footer-.css">
+    <link rel="stylesheet" href="assets/css/css/Sign-Up-Form---Gabriela-Carvalho.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min-1.css">
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
     <div class="container-fluid">
         <div class="row">
-            <div class="col"><a href="#"><img width="144" height="94" src="assets/img/logo.png"></a></div>
-            <div class="col"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone-fill" style="color: #ff0000;">
+            <div class="col-6 col-md-2"><a href="index.html"><img width="144" height="94" src="assets/img/logo.png"></a></div>
+            <div class="col-6 col-md-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone-fill" style="color: #ff0000;">
                     <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
                 </svg><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><strong>&nbsp;Hotline mua hàng</strong></label><label class="form-label">Gọi ngày: 099 9657222</label></div>
-            <div class="col"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-truck" style="color: #ff0000;">
+            <div class="col-6 col-md-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-truck" style="color: #ff0000;">
                     <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"></path>
                 </svg><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><strong>&nbsp;Giao hàng tận nơi</strong></label><label class="form-label">Miễn phí từ 5 sản phẩm</label></div>
-            <div class="col"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-star">
+            <div class="col-6 col-md-2"><label class="form-label mt-4 mb-0 pb-0" style="color: #ff0000;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-star">
                         <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"></path>
                     </svg><strong>&nbsp;1 đổi 1 nếu lỗi hàng</strong></label><label class="form-label">Trong vòng 7 ngày</label></div>
-            <div class="col"></div>
-            <div class="col"><label class="col-form-label mt-4 mb-0 pb-0" style="color: #212529;" href="login.html"><a href="#" style="color: rgb(10,10,10);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-circle" style="font-size: 21px;">
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"></path>
-                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"></path>
-                        </svg><strong>&nbsp;Đăng nhập/Đăng ký</strong></a></label></div>
-            <div class="col"><label class="col-form-label mt-4 mb-0 pb-0" style="color: #212529;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart3" style="font-size: 32px;">
-                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"></path>
-                    </svg><strong>&nbsp;Giỏ hàng</strong></label></div>
+            <div class="col-6 col-md-2"></div>
+            <div class="col-6 col-md-2 mt-4">
+                <div class="position-relative" id="userDropdownWrapper">
+                    <div id="authLinks"><a class="mt-5" href="Signup.html" style="color: rgb(8,8,8);font-weight: bold;"></a><a class="me-2" href="Login.html" style="color: rgb(8,8,8);font-weight: bold;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-fill" style="font-size: 21px;">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"></path>
+                            </svg>Đăng nhập&nbsp;</a></div>
+                    <div id="userMenu" style="display: none; cursor: pointer"><span class="fw-bold" id="usernameDisplay">Text</span>
+                        <div class="bg-white border shadow position-absolute p-2 mt-1" id="dropdownMenu" style="display: none; z-index: 1000;"></div><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <ul class="nav nav-tabs">
-            <li class="nav-item"><a class="nav-link active" href="index.html"><strong>Home</strong></a></li>
-            <li class="nav-item"><a class="nav-link" href="Tshirt.html">T-Shirt</a></li>
-            <li class="nav-item"><a class="nav-link" href="Bag.html">Tote Bag</a></li>
-            <li class="nav-item"><a class="nav-link" href="Hoodie.html">Hoodie</a></li>
-            <li class="nav-item"><a class="nav-link" href="Phukien.html">Phụ kiện</a></li>
+            <li class="nav-item"><a class="nav-link active" href="Tshirt.html" style="font-size: 20px;"><strong>T-Shirt</strong></a></li>
+            <li class="nav-item"></li>
+            <li class="nav-item"><a class="nav-link" href="Bag.html" style="font-size: 20px;">Tote Bag</a></li>
+            <li class="nav-item"><a class="nav-link" href="Hoodie.html" style="font-size: 20px;">Hoodie</a></li>
+            <li class="nav-item"><a class="nav-link" href="Phukien.html" style="font-size: 20px;">Phụ kiện</a></li>
         </ul>
-        <div style="background: #d9d9d9;height: 40px;"><a class="ms-3 me-2" href="index.html" style="font-size: 20px;">Trang chủ/</a><a href="Tshirt.html" style="font-size: 20px;">T-Shirt</a></div>
+        <div class="d-flex align-items-center" style="background: #d9d9d9;height: 40px;"><a class="ms-3 me-2" href="index.html" style="font-size: 15px;">Trang chủ/</a><a href="Tshirt.html" style="font-size: 15px;">T-Shirt</a></div>
     </div>
     <div class="container">
         <h3>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;T-Shirt</h3>
@@ -54,7 +67,7 @@
                 <div class="col text-center" style="text-align: center;">
                     <div><img width="225" height="198" src="assets/img/clipboard-image-9.png">
                         <p><strong><span style="color: rgb(0, 0, 0);">Áo Thun Dáng Mini</span></strong></p>
-                        <p>399.000 VND</p><a href="chitietsanpham.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
+                        <p>399.000 VND</p><a href="AoThunMini.html" style="width: fit-content;">Xem chi tiết</a><button class="btn" type="button" onclick="window.location.href=&quot;CartT.html&quot;">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart4" style="font-size: 31px;">
                                 <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"></path>
                             </svg>Thêm vào giỏ hàng</button>
                     </div>
@@ -109,7 +122,7 @@
             <div style="height: 50px;"><button class="btn btn-link text-decoration-none text-white" type="button" data-bs-toggle="collapse" data-bs-target="#footerCollapse">Thông tin khác&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-down" id="footerArrow">
                         <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
                     </svg></button></div>
-            <div class="text-white pt-4 collapse" id="footerCollapse-1" style="height: 50px;background: rgb(41, 44, 47);">
+            <div class="text-white pt-4 collapse" id="footerCollapse" style="height: 50px;background: rgb(41, 44, 47);">
                 <div class="row" style="background: rgb(41, 44, 47);width: 100%;">
                     <div class="col">
                         <div>
@@ -158,6 +171,8 @@
     <script src="assets/js/Addjs.js"></script>
     <script src="assets/js/Collapse-card-animations.js"></script>
     <script src="assets/js/Contact-Form-v2-Modal--Full-with-Google-Map-scripts.js"></script>
+    <script src="assets/js/untitled.js"></script>
+    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
